# cipher

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  TODO.md
src/: main.rs  output.rs
src/book/: doctor.rs  init.rs  mod.rs  output.rs  paths.rs
src/config/: cli.rs  mod.rs  profile.rs
src/glossary/: cli.rs  closest_match.rs  mod.rs
src/import/: mod.rs
src/state/: mod.rs  status.rs
src/translate/: cmd.rs  mod.rs  prompt.rs  types.rs
src/translate/providers/: gemini.rs  mod.rs  openai.rs
src/validate/: mod.rs
