[package]
name = "cipher"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
epub = "2.1.5"
htmd = "0.5.0"
rig-core = "0.34.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.25.0"

[profile.release]
opt-level = "z"  # Optimize for size ("s" is an alternative, test both)
lto = true       # Enable Link-Time Optimization
codegen-units = 1 # Reduce parallel code generation units to increase optimization potential
panic = "abort"  # Abort on panic to remove unwinding code
strip = true     # Strip symbols from the binary (requires Rust 1.59+)
